<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="16dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorAccent"
        android:padding="2dp">

        <ImageView
            android:id="@+id/pic_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/recipe"
            android:scaleType="fitXY" />

        <TextView
            android:id="@+id/recipes_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#FFFFFF"
            android:textSize="32sp"
            app:fontFamily="@font/ribeye" />

    </RelativeLayout>

</android.support.v7.widget.CardView>