...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/ingredient"
        style="@style/IngredientText"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="6"
        app:layout_constraintStart_toEndOf="@+id/measure"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Graham Cracker crumbs" />

    <TextView
        android:id="@+id/quantity"
        style="@style/IngredientText"

        android:layout_marginStart="8dp"
...
